--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "mongoose": "^5.7.6",
     "morgan": "~1.9.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.3.1"
+    "nodemailer": "^6.3.1",
+    "unirest": "^0.6.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
